--- a/index.html
+++ b/index.html
@@ -33,9 +33,9 @@
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
           <div class="navbar-nav">
             <a class="nav-link active" aria-current="page" href="#">Home</a>
-            <a class="nav-link" href="#">Contact</a>
-            <a class="nav-link" href="#">Pricing</a>
-            <a class="nav-link">Download</a>
+            <a class="nav-link" href="#footer">Contact</a>
+            <a class="nav-link" href="#pricing">Pricing</a>
+            <a class="nav-link" href="#cta">Download</a>
           </div>
         </div>
     </nav>
